# optimizacija-trajnostne-mobilnostni-v-ljubljani

./: .gitattributes  .gitignore  README.md  SNAKS_predstavitev.pptx  index.html  otmlj-data_2024-05-13_20-38-01.json  package.json
assets/: index--om05hfW.js  index-B5dRnWkj.js  index-CTXXh19R.js  index-DfX0m8oa.css  index-jH8t8p-t.css
data/: Delovno_aktivno_prebivalstvo_po_skupinah_poklicev_SKP-08_in_statisticnih_regijah_delovnega_mesta_Slovenija_letno.xlsx  README.md
processing/: process-data-for-visualization.py  pyproject.toml
processing/otmlj/: avtobusi.py  common.py  green_zone.py  kolesa.py  p_plus_r.py
processing/raw-data/green-zone/: green-zone-polygon.json
processing/raw-data/lj-kolesarji/: MOL_KolesarskePoti_wgs84.json
public/: mollpp_wgs84.json
src/: main.ts
visualization/: .gitattributes  .gitignore  README.md  index.html  package.json  start.bat  tsconfig.json  vite.config.js
visualization/public/: otmlj-data_2024-05-13_20-38-01.json
visualization/src/: data.ts  main.ts  style.scss
